Add partials/* and update main.pug

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,11 @@
 doctype html
 html
     head
+        script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
         title MeTube
     body
         header
             h1 MeTube
         main
             block content
-        footer
-            span &copy; MeTube
+        include ../partials/footer
