Fix app.js and update package.json, main.pug, and partials/*

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,8 +4,10 @@ html
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
         title MeTube
     body
-        header
-            h1 MeTube
+        // Header
+        include ../partials/header
+        // Main
         main
             block content
+        // Footer
         include ../partials/footer
