--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
-    div.footer__icon
+    .footer__icon
         i.fab.fa-youtube
-    span.footer__text &copy; 2020 MeTube
+    span.footer__text Copyright &copy; #{new Date().getFullYear()} MeTube
