--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -6,4 +6,4 @@ header.header
             li
                 a(href="#") Join
             li
-                a(href="#") Logged In
+                a(href="#") Log In
