Update main.pug and controllers/*

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
-        title | #{siteName}
+        title #{pageTitle} | #{siteName}
     body
         // Header
         include ../partials/header
