--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,4 +1,9 @@
 extends layouts/main.pug
 
 block content
-    p Change Password
+    .form-container
+        form(action=`${routes.users}${routes.changePassword}`, method="post")
+            input(type="password", placeholder="Current Password", name="oldPassword")
+            input(type="password", placeholder="New Password", name="newPassword")
+            input(type="password", placeholder="Verify New Password", name="verify-newPassword")
+            input(type="submit", value="Change Password")
