--- a/views/join.pug
+++ b/views/join.pug
@@ -3,9 +3,9 @@ extends layouts/main
 block content
     .form-container
         form(action=routes.join, method="post")
-            input(type="text", placeholder="Name", name="name")
-            input(type="email", placeholder="Email", name="email")
-            input(type="password", placeholder="Password", name="password")
-            input(type="password", placeholder="Verify Password", name="verifyPassword")
+            input(type="text", placeholder="Name", name="name", required=true)
+            input(type="email", placeholder="Email", name="email", required=true)
+            input(type="password", placeholder="Password", name="password", required=true)
+            input(type="password", placeholder="Verify Password", name="verifyPassword", required=true)
             input(type="submit", value="Join Now")
         include partials/socialLogin
