--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -2,8 +2,8 @@ extends layouts/main.pug
 
 block content
     .form-container
-        form(action=`${routes.videos}${routes.editVideo}`, method="post")
-            input(type="text", placeholder="Title", name="title")
-            textarea(placeholder="Description", name="description")
+        form(action=`${routes.videos}${routes.editVideo(video.id)}`, method="post")
+            input(type="text", placeholder="Title", name="title" value=video.title)
+            textarea(placeholder="Description", name="description") #{video.description}
             input(type="submit", value="Update Video")
         a.form-container__link.form-container__link--delete(href=`${routes.videos}${routes.deleteVideo}`) Delete Video
