--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,12 +2,13 @@ doctype html
 html
     head
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
+        link(rel="stylesheet", href="assets/css/style.css")
         title #{pageTitle} | #{siteName}
     body
-        // Header
+        // Header 
         include ../partials/header
-        // Main
+        // Main 
         main
             block content
-        // Footer
+        // Footer 
         include ../partials/footer
