Fix app.js and main.pug, add _reset.scss, and update style.scss

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
-        link(rel="stylesheet", href="assets/css/style.css")
+        link(rel="stylesheet", href="/assets/css/style.css")
         title #{pageTitle} | #{siteName}
     body
         // Header 
