--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,6 +3,7 @@ html
     head
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
         link(rel="stylesheet", href="/assets/css/style.css")
+        script(defer src="/assets/js/main.js")
         title #{pageTitle} | #{siteName}
     body
         // Header 
