--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,8 +2,8 @@ doctype html
 html
     head
         script(src="https://kit.fontawesome.com/50dc7c1f17.js", crossorigin="anonymous")
-        link(rel="stylesheet", href="/assets/css/style.css")
-        script(defer src="/assets/js/main.js")
+        link(rel="stylesheet", href="/static/css/style.css")
+        script(defer src="/static/js/main.js")
         title #{pageTitle} | #{siteName}
     body
         // Header 
