--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,1 +1,11 @@
-@import './reset';
+/* config */
+@import './config/_variables.scss';
+@import './config/reset.scss';
+
+/* main */
+@import './main.scss';
+
+/* partials */
+@import './partials/header.scss';
+
+/* pages */
