--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -22,3 +22,9 @@ header.header
                     a(href=`${routes.users}${routes.userDetail(user.id)}`) Profile
                 li.loginout
                     a(href=routes.logout) Log Out
+    .header__column
+        i.fas.fa-search
+        .menuBtn
+            .stick
+            .stick
+            .stick
